--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3193,3 +3193,13 @@ h3.ghj {
 .product-one > .product-left {
   margin-bottom: 20px;
 }
+
+.product-one > .product-left {
+  margin-bottom: 20px;
+}
+
+.quantity {
+  margin-top: 3em;
+  margin-right: 10px;
+  float: left;
+}
