--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1440,7 +1440,7 @@ a.mask {
 .account-left input[type="text"],
 .account-left input[type="password"],
 .account-left input[type="email"] {
-  width: 90%;
+  /*width: 90%;*/
   margin: 0px;
   color: #000;
   background: none;
@@ -3315,4 +3315,18 @@ span.twitter-typeahead {
   cursor: pointer;
   position: relative;
   top: -2px;
+}
+form .has-success .form-control {
+  border-color: green;
+}
+form .has-error .form-control {
+  border-color: red;
+}
+.has-error,
+.has-success {
+  position: relative;
+}
+.form-control-feedback {
+  right: 10px;
+  top: 25px;
 }
