--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,3 @@
-/*--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
 body {
   background: #fff;
   font-family: "Lato-Regular";
@@ -1050,7 +1044,7 @@ a.mask {
   line-height: 27px;
   color: #555555;
   cursor: pointer;
-  text-transform: capitalize;
+  /*text-transform: capitalize;*/
   font-weight: normal;
   margin-top: 0;
 }
@@ -3203,7 +3197,8 @@ h3.ghj {
   float: left;
 }
 
-#cart table img {
+#cart img,
+.cart table img {
   height: 50px;
 }
 
@@ -3329,4 +3324,22 @@ form .has-error .form-control {
 .form-control-feedback {
   right: 10px;
   top: 25px;
+}
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  background-color: #fefefe;
+  opacity: 0.7;
+  display: none;
+}
+.preloader img {
+  position: relative;
+  left: 50%;
+  top: 50vh;
+  margin: -100px 0 0 -100px;
 }
